<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/choose_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/paint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/normal_paint"
            app:layout_constraintTop_toBottomOf="@+id/choose_menu"
            />

        <Button
            android:id="@+id/dda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dda"
            app:layout_constraintTop_toBottomOf="@+id/paint"
            />

        <Button
            android:id="@+id/bresenham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bresenham"
            app:layout_constraintTop_toBottomOf="@+id/dda"
            />

        <Button
            android:id="@+id/circle_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/circlepoint"
            app:layout_constraintTop_toBottomOf="@+id/bresenham"
            />

        <Button
            android:id="@+id/circle_midpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/circlemidpoint"
            app:layout_constraintTop_toBottomOf="@+id/circle_point"
            />

        <Button
            android:id="@+id/ellips_midpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ellipsmidpoint"
            app:layout_constraintTop_toBottomOf="@+id/circle_midpoint"
            />

        <Button
            android:id="@+id/square_transformasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/square_transformasi"
            app:layout_constraintTop_toBottomOf="@+id/ellips_midpoint"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>